# lumia

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
lumia/: __init__.py  pgserver.py
lumia/config/: __init__.py  runtime.py  schema.py  toml_handler.py
lumia/core/: __init__.py  box.py  event_bus.py  pipeline.py  utils.py
lumia/mcp/: __init__.py  client.py  lifecycle.py
lumia/mcp/servers/: browser.py  fs.py  memory_query.py  python_exec.py  shell_exec.py  typescript.py  web_search.py
lumia/memory/: __init__.py  decay.py  embedding.py  graph.py  retrieval.py  schema.sql
lumia/plugin/: __init__.py  git_ops.py  hooks.py  loader.py  manager.py  manifest.py
lumia/system/: __init__.py  adapters.py  mcp_api.py
lumia/validation/: __init__.py
pkg/: __init__.py
pm/: __init__.py  cli.py
pm/commands/: __init__.py  install.py
specs/: LUMIA_SPECS.md
tests/unit/: test_box.py  test_config.py  test_event_bus.py  test_mcp.py  test_memory.py  test_pipeline.py  test_plugin_system.py
worker/: package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
